--- a/resources/css/marquee.css
+++ b/resources/css/marquee.css
@@ -5,6 +5,7 @@
     background-color: #fff; /* Black background */
     color: #333; /* White text color */
     padding: 10px 0; /* Padding for the marquee */
+    margin-left: 15px;
 }
 
 .marquee {
